# Template_MLOps_accidents

./: .dockerignore  .env  .gitignore  DEV-docker-compose-up.sh  DataIngestion.Dockerfile  Dockerfile  LICENSE  ModelApi.Dockerfile  PROD-docker-compose-up.sh  Procfile  README.md  README_db.md  Readme_docker.md  UI.Dockerfile  airflowDb.Dockerfile  api.Dockerfile  docker-compose-prod.yml  docker-compose.yml  docker_startup.sh  dvc.yaml  requirements.txt  requirements_start.txt  setup.py  startup_accidents.sh  startup_compose.sh  test_features.json  test_requirements.txt
airflow/: Readme.md
c4/: README.md  workspace.dsl  workspace.json
data/: preprocessed.dvc  raw.dvc
data_version_control/: README.md
login/: Dockerfile  README.md  creation_admin.http  creation_request.http  docker-compose.yaml  requirements.txt
logs/: f1_scores.jsonl  preds_call.jsonl  preds_labeled.jsonl  preds_test.jsonl  train.jsonl  update_data.jsonl
metrics/: accuracy.json
model_storage/: README.md
models/: .gitignore  trained_model.joblib.dvc
myenviron/: pyvenv.cfg
notebooks/: 1.0-at-weights-and-biases.ipynb  1.0-ldj-initial-data-exploration.ipynb  1.0-prb-initial-data-exploration.ipynb  (+17 more)
python-packages/green_light_ui/: Dockerfile  README.md  UI.Dockerfile  pyproject.toml  start_streamlit.sh
python-packages/green_light_ui/src/green_light_ui/: app.py  config.py  fastapi2.py  notes.md  requirements.txt  style.css
python-packages/green_light_ui/src/green_light_ui/tabs/: api.py  bugs.py  ci_cd.py  evaluation.py  intro.py  monitoring.py  predictions.py  service.py  service_platform.py  test.ipynb  training.py  updates.py  user_interface.py
python-packages/green_light_ui/tests/: test_app.py  test_stub.py
python-packages/model_api/: Dockerfile  ModelApi.Dockerfile  README.md  pyproject.toml
python-packages/model_api/data/preprocessed/: X_train.csv
python-packages/model_api/src/model_api/: api.py  evaluate.py  predict_model.py  test_features.json  train_model.py
python-packages/model_api/src/model_api/feature_extraction/: import_raw_data.py  make_dataset.py  make_dataset_from_db.py
python-packages/model_api/tests/: test_user_routes.py
python-packages/road_accidents_database_ingestion/: Dockerfile  README.md  pyproject.toml
python-packages/road_accidents_database_ingestion/dags/: my_dir_sensor_dag.py
python-packages/road_accidents_database_ingestion/scripts/: demo.py
python-packages/road_accidents_database_ingestion/src/road_accidents_database_ingestion/: db_tasks.py  enums.py  file_tasks.py  models.py
python-packages/road_accidents_database_ingestion/tests/: conftest.py
python-packages/road_accidents_database_ingestion/tests/road_accidents_database_ingestion/: constants.py  test_db_tasks.py  test_file_tasks.py
(+192 files in other folders)
