[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model_api"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "The API for the ML Model"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
"fastapi",
"uvicorn",
"pandas",
"numpy",
"scikit-learn==1.3.2",
"imbalanced-learn==0.12.3",
"xgboost==2.1.0",
"joblib==1.4.2",
"pydantic",
"sqlalchemy",
"psycopg2-binary",
"requests",
"pyjwt",
"pytest",
"pytest-mock",
"passlib",
"bcrypt"
]
