[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "road_accidents_database_ingestion"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    "apache-airflow[celery]==2.9.2",
    "python-dotenv",
    "psycopg2-binary",
    "sqlalchemy",
    "sqlmodel",
    "pandas",
    "numpy",
    "tqdm",
    "pytest",
]
